--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Goomo Studio</title>
   </head>
   <body>
-    <h1><span style="color: #006600;">龜毛工坊</span></h1>
+    <h1><span style="color: #006600;">龜毛工坊 你好!</span></h1>
     <hr style="color: #ff9900;">
     <ul>
       <li><span style="color: #cc9933;">My name is 龜毛族長. </span></li>
